Added groupSubject and type content from category
